fix some alignment

--- a/scss/lightbox.scss
+++ b/scss/lightbox.scss
@@ -75,7 +75,7 @@
         text-align: center;
         text-transform: uppercase;
         margin-left: $note_column_width;
-        margin-bottom: 5px;
+        line-height: 24px;
     }
 
     .line_container {
